# PyQUDA

./: .gitattributes  .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  plugin_pyx.py  plugins.md  pyproject.toml  pyquda  pyquda_pyx.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: PyQUDA-Utils.yaml  PyQUDA.yaml  python-package.yaml
example/: 0.ipynb  1.py  1_Quenched_HMC.ipynb  1_Quenched_HMC.py  2.ini.xml  2.py  2_HYP_Smearing_Scaling.py  2_Quark_Propagator.py  3.py  3_Pion_Proton_2pt.py  4_Pion_PCAC.py  5_Pion_Dispersion.py  README.md  hmc.py
examples/: 1_Quenched_HMC.ipynb  1_Quenched_HMC.py  2_Quark_Propagator.py  3_Pion_Proton_2pt.py  4_Pion_PCAC.py  5_Pion_Dispersion.py  hmc.py
pyquda/: README.md  __init__.py  __main__.py  core.py  deprecated.py  enum_quda.in.py  enum_quda.py  field.py  gauge_utils.py  hmc.py  hmc_clover.py  hmc_gauge.py  hmc_hisq.py  hmc_param.py  lattice.py  mpi.py  pointer.pxd  pointer.pyi  pyqcu.pyi  pyquda.in.pyi  pyquda.pyi  quda_constants.py
pyquda/action/: __init__.py  abstract.py  clover_wilson.py  gauge.py  hisq.py  one_flavor_clover.py  pure_gauge.py  rhmc_param.py  symanzik_gauge.py  symanzik_tree_gauge.py  two_flavor_clover.py  two_flavor_hisq.py  wilson_gauge.py
pyquda/dirac/: __init__.py  abstract.py  clover_wilson.py  gauge.py  general.py  hisq.py  laplace.py  pure_gauge.py  staggered.py  wilson.py
pyquda/dslash/: __init__.py  abstract.py  clover_wilson.py  general.py  hisq.py  wilson.py  wilson_multishift.py
pyquda/include/: quda.h  quda_define.h
pyquda/include/qcu/: qcu.h
pyquda/include/quda/: quda.h
pyquda/pyquda/: pyquda.pyi
pyquda/pyquda/dirac/: abstract.py  gauge.py  staggered.py  wilson.py
pyquda/src/: enum_quda.pxd  extension.pxd  malloc_pyquda.pyx  malloc_quda.pxd  pointer.pyx  pyqcu.pyx  pyquda.in.pyx  pyquda.py  pyquda.pyx  pyquda_extension.pyx  qcu.pxd  quda.in.pxd  quda.pxd  quda_constants.pxd
pyquda/utils/: eigen_utils.py  gamma.py  gauge_utils.py  layout.py  phase.py  prop_utils.py  source.py
pyquda_core/: LICENSE  MANIFEST.in  README.md  pyproject.toml  pyquda_pyx.py  setup.cfg  setup.py
pyquda_core/pyquda/: __init__.py  __main__.py  _version.py  enum_quda.in.py  field.py  file.py  gamma.py  hmc.py  malloc_pyquda.pyi  pointer.pyi  pyquda.pyi  quda.pyi  quda_define.in.py  stout_smear.cu
pyquda_core/pyquda/action/: __init__.py  abstract.py  clover_wilson.py  gauge.py  hisq.py
pyquda_core/pyquda/dirac/: __init__.py  abstract.py  clover_wilson.py  gauge.py  general.py  hisq.py  staggered.py  wilson.py
pyquda_core/pyquda/src/: malloc_quda.cpp  pyquda.in.pyx  quda.in.pxd  quda.in.pyx
pyquda_core/pyquda_comm/: __init__.py  array.py  field.py  file.py  hdf5.py  pointer.pxd  pointer.pyi
pyquda_core/pyquda_comm/src/: pointer.pyx
pyquda_core/quda/: LICENSE
pyquda_core/quda/include/: enum_quda.h  quda.h
pyquda_io/: __init__.py  _field_utils.py  _mpi_file.py  chroma.py  ildg.py  io_general.py  io_utils.py  kyu.py  lime.py  milc.py  mpi_utils.py  nersc.py  npy.py  openqcd.py  xqcd.py
pyquda_plugins/: __main__.py  _gwu.py  bind_gwu.py  plugin_pyx.py  pygwu_utils.py  pyquda_plugins_pyx.py  setup.py
pyquda_plugins/pycontract/: __init__.py
pyquda_plugins/pycparser/: pycparser
pyquda_plugins/pygwu/: __init__.py  gwu.pxd  pygwu.pyx
pyquda_utils/: alg_remez.py  checksum.py  convert.py  core.py  deprecated.py  eigensolve.py  fft.py  gamma.py  gauge_nd_sun.py  geo_block_size.py  gpt.py  hmc_param.py  milc_rhmc_param.py  overlap_utils.py  phase.py  phase_v2.py  quasi_axial_gauge_fixing.py  source.py  wilson_loop.py
pyquda_utils/io/: __init__.py  chroma.py  gauge_utils.py  io_general.py  kyu.py  lime.py  milc.py  mpi_file.py  nersc.py  npy.py  openqcd.py  xqcd.py
test/: test.py
tests/: check_pyquda.py  generate_resource.py  invert.clover.ini.xml  invert_clover.py  test.checksum.py  test.clover.chroma.py  test.clover.cli.py  test.clover.distance.py  test.clover.hmc.py  test.clover.ini.xml  test.clover.isotropic.ini.xml  test.clover.isotropic.py  test.clover.mpi.py  test.clover.mrhs.py  test.clover.multigrid.py  test.clover.numpy.py  test.clover.py  test.clover.torch.py  test.covdev.py  test.dslash.py  test.dslash.qcu.py  test.extension.py  test.flow.ini.xml  test.flow.py  test.flow.scale.py  test.gaussian.ini.xml  test.gaussian.py  test.gfix.ini.xml  test.gfix.py  test.grid.py  test.hisq.ini.xml  test.hisq.py  test.hmc.clover.py  test.hmc.gauge.py  test.hmc.hisq.py  test.hmc.py  test.io.py  test.laplace.py  test.loop.py  test.mesonspec.ini.xml  (+51 more)
tests/chroma/: Dockerfile  build.sh  build_automake.sh  build_cmake.sh
(+17 files in other folders)
