[metadata]
name = PyQUDA
version = attr: pyquda.version.__version__
url = https://github.com/CLQCD/PyQUDA
author = SaltyChiang
author_email = SaltyChiang@users.noreply.github.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Cython
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Environment :: GPU
    Environment :: GPU :: NVIDIA CUDA
    Topic :: Scientific/Engineering :: Physics
license = MIT
license_files = LICENSE
description = Python wrapper for quda written in Cython.
long_description = file: README.md

[options]
install_requires =
    mpi4py
    numpy
python_requires = >=3.8
packages = find:

[options.package_data]
pyquda =
    *.pyi
    *.pxd
    src/*.pxd
    src/*.pyx
    quda/**

[options.entry_points]
console_scripts =
    pyquda = pyquda.__main__:main
