[metadata]
name = PyQUDA-Utils
version = attr: pyquda_utils.__version__
url = https://github.com/CLQCD/PyQUDA
author = SaltyChiang
author_email = SaltyChiang@users.noreply.github.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Cython
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Environment :: GPU
    Environment :: GPU :: NVIDIA CUDA
    Topic :: Scientific/Engineering :: Physics
license = MIT
license_files = LICENSE
description = Utility scripts based on PyQUDA
long_description = file: README.md

[options]
install_requires =
    PyQUDA
python_requires = >=3.8
packages = pyquda_utils
